--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="x-ua-compatible"content="IE=edge">
 	<meta name='description' content='Stick Note. Probably the best note web app there is.'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Summernote</title>
+	<title>Sticky Notes</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
   	<link href="css/sweetalert.css" rel="stylesheet">
@@ -56,8 +56,6 @@
 		</section>
 	</section>
 
-	
-
     <script src="js/jquery.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -106,7 +104,6 @@
 			    position: 'bottom-left',
 			    textAlign: 'left',  
 			    loader: false, 
-			    //loaderBg: '#9EC600',  // Background color of the toast loader
 			    beforeShow: function () {}, // will be triggered before the toast is shown
 			    afterShown: function () {
 			    	$("#savelistStickyNotes ").hide();
